--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-cal: var(--font-cal);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +21,6 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: white;
   font-family: Arial, Helvetica, sans-serif;
 }
